--- a/fish-discover.css
+++ b/fish-discover.css
@@ -4,6 +4,18 @@ body {
     position: relative;
 }
 
+.card-btn:hover,
+.memotest-btn:hover {
+    transform: scale(110%);
+    transition: all 500ms ease-in-out;
+}
+
+.card-btn:not(:hover),
+.memotest-btn:not(:hover) {
+    transform: scale(100%);
+    transition: all 500ms ease-in-out;
+}
+
 .card-btn {
   height: 6vw;
   width: 9vw;
